# TFT_Spider

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproj.toml  pyproject.toml
tft_data/: TFTData.py  tft_processed_data.json  tft_raw_data.json
tft_spider/: __init__.py  collector.py  config.py  exporter.py  processor.py  utils.py
