[project]
name = "tft-spider"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "pillow>=10.3.0",
    "requests>=2.28.2",
    "rich>=13.3.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long（已由 line-length 控制）
]

[tool.ruff.lint.isort]
known-first-party = ["tft_spider"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
